src/test/deca/syntax/valid/strings.deca
// Description:
//    Test des caractères spéciaux
//
// Resultats:
//    \\\"

{
    println("\\","\"");
}
