src/test/deca/syntax/invalid/EOL.deca
// Description:
//    String contenant un caractère interdit
//
// Resultats:
//    Erreur du lexer ligne 11, au niveau du \n
//
// Historique:
//    cree le 01/01/2024

{
    println("\n");
}
